# CAP-Bench

./: .env.example  .gitignore  NOTICE  README.md  pytest.ini  requirements.txt
src/evaluate/: .gitignore  README.md  count.py  generate_eval.py  pyproject.toml  run_eval.py  run_eval_batch.sh
src/evaluate/cache_manager_web/: CLAUDE.md  README.md  run.py
src/evaluate/cache_manager_web/backend/: app.py  config.py
src/evaluate/cache_manager_web/backend/api/: routes.py
src/evaluate/cache_manager_web/backend/models/: __init__.py  cache_manager.py  keyword_detector.py
src/evaluate/cache_manager_web/extension/: background.js  manifest.json  popup.html  popup.js
src/evaluate/cache_manager_web/frontend/: index.html
src/evaluate/cache_manager_web/frontend/css/: style.css
src/evaluate/cache_manager_web/frontend/js/: actions.js  api.js  main.js  store.js
src/evaluate/cap_eval/: CLAUDE.md  __init__.py  eval_runner.py  eval_toolkit.py  evaluator.py  verification_tree.py
src/evaluate/cap_eval/api_tools/: CLAUDE.md  tool_arxiv.py  tool_pdf.py
src/evaluate/cap_eval/llm_client/: CLAUDE.md  azure_openai_client.py  base_client.py  bedrock_anthropic_client.py  openai_client.py
src/evaluate/cap_eval/prompts/: CLAUDE.md  cache_prompts.py
src/evaluate/cap_eval/utils/: CLAUDE.md  __init__.py  cache_filesys.py  load_eval_script.py  logging_setup.py  page_info_retrieval.py  path_config.py  url_tools.py
src/evaluate/eval_scripts/: task-1533cc.py
src/evaluate/eval_scripts/2026_05_16/: task-0e526a.py  task-13f79e.py  task-1a7a24.py  task-1b8b3c.py  task-1c3247.py
(+33 files in other folders)
