[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cap-eval"
version = "0.1.0"
description = "CAP-Eval: evaluation toolkit for web-based agent benchmarks"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "openai",
    "backoff",
    "pydantic>=1.10",
    "tqdm",
    "pandas>=1.4",
    "patchright>=1.58.0",
    "arxiv",
    "googlemaps",
    "aiohttp",
    "httpx",
    "dill",
    "python-json-logger",
    "beautifulsoup4",
    "PyMuPDF",
    "google-auth",
    "google-api-python-client",
    "gspread",
    "fastapi",
    "jinja2",
    "markdown",
    "uvicorn[standard]",
    "markdownify",
    "html2text>=2025.4.15",
    "pillow>=11.3.0",
    "validators>=0.35.0",
    "python-multipart>=0.0.22",
]

[project.optional-dependencies]
code-gen = [
    "anthropic[bedrock]"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["cap_eval*"]
exclude = ["code_gen*", "InfoVisualizer*", "dataset*", "eval_scripts*", "scripts*"]
